# EmbeddedSWBlog

./: .gitignore  CMakeLists.txt  CMakePresets.json  requirements.txt
.github/workflows/: main.yml
posts/: 000_intro.rst  001_what_is_embedded.rst
sources/: conf.py  index.rst
sources/posts/: 000_intro.rst  002_booting.rst
